Compiler/fasto/tests/filter_neg1.err
Type error: Filter: function is not a predicate function, expected type bool instead of int at line 4, column 13